Repaired spacing above jump-menu

--- a/styl/ghetto-box/variables.styl
+++ b/styl/ghetto-box/variables.styl
@@ -41,6 +41,7 @@ padding-sizes = {
 	nil: 0,
 	sm: line-height / 2,
 	md: line-height,
+	mdlg: line-height * 1.5,
 	lg: line-height * 2,
 	xl: line-height * 4,
 }
